--- a/examples/css3d_periodictable.html
+++ b/examples/css3d_periodictable.html
@@ -116,10 +116,10 @@
 		<script>
 
 			var table = [
-				"H", "Hydrogen", "1.00794", 1, 1,
-				"He", "Helium", "4.002602", 18, 1,
-				"Li", "Lithium", "6.941", 1, 2,
-				"Be", "Beryllium", "9.012182", 2, 2,
+				"Z", "Zafril", "1.00794", 24, M,
+				"Z", "Zarif", "4.002602", 24, M,
+				"A", "Akeem", "6.941", 25, M,
+				"N", "Niena", "9.012182", 22, M,
 				"B", "Boron", "10.811", 13, 2,
 				"C", "Carbon", "12.0107", 14, 2,
 				"N", "Nitrogen", "14.0067", 15, 2,
