--- a/examples/css3d_periodictable.html
+++ b/examples/css3d_periodictable.html
@@ -80,7 +80,7 @@
 					font-size: 12px;
 					color: rgba(127,255,255,0.75);
 				}
-
+			//biru neon gelap
 			button {
 				color: rgba(127,255,255,0.75);
 				background: transparent;
@@ -89,9 +89,11 @@
 				padding: 5px 10px;
 				cursor: pointer;
 			}
+			//biru neon
 			button:hover {
 				background-color: rgba(0,255,255,0.5);
 			}
+			//biru neon
 			button:active {
 				color: #000000;
 				background-color: rgba(0,255,255,0.75);
@@ -116,124 +118,124 @@
 		<script>
 
 			var table = [
-				"H", "Hydrogen", "1.00794", 1, 1,
-				"He", "Helium", "4.002602", 18, 1,
-				"Li", "Lithium", "6.941", 1, 2,
-				"Be", "Beryllium", "9.012182", 2, 2,
-				"B", "Boron", "10.811", 13, 2,
-				"C", "Carbon", "12.0107", 14, 2,
-				"N", "Nitrogen", "14.0067", 15, 2,
-				"O", "Oxygen", "15.9994", 16, 2,
-				"F", "Fluorine", "18.9984032", 17, 2,
-				"Ne", "Neon", "20.1797", 18, 2,
-				"Na", "Sodium", "22.98976...", 1, 3,
-				"Mg", "Magnesium", "24.305", 2, 3,
-				"Al", "Aluminium", "26.9815386", 13, 3,
-				"Si", "Silicon", "28.0855", 14, 3,
-				"P", "Phosphorus", "30.973762", 15, 3,
-				"S", "Sulfur", "32.065", 16, 3,
-				"Cl", "Chlorine", "35.453", 17, 3,
-				"Ar", "Argon", "39.948", 18, 3,
-				"K", "Potassium", "39.948", 1, 4,
-				"Ca", "Calcium", "40.078", 2, 4,
-				"Sc", "Scandium", "44.955912", 3, 4,
-				"Ti", "Titanium", "47.867", 4, 4,
-				"V", "Vanadium", "50.9415", 5, 4,
-				"Cr", "Chromium", "51.9961", 6, 4,
-				"Mn", "Manganese", "54.938045", 7, 4,
-				"Fe", "Iron", "55.845", 8, 4,
-				"Co", "Cobalt", "58.933195", 9, 4,
-				"Ni", "Nickel", "58.6934", 10, 4,
-				"Cu", "Copper", "63.546", 11, 4,
-				"Zn", "Zinc", "65.38", 12, 4,
-				"Ga", "Gallium", "69.723", 13, 4,
-				"Ge", "Germanium", "72.63", 14, 4,
-				"As", "Arsenic", "74.9216", 15, 4,
-				"Se", "Selenium", "78.96", 16, 4,
-				"Br", "Bromine", "79.904", 17, 4,
-				"Kr", "Krypton", "83.798", 18, 4,
-				"Rb", "Rubidium", "85.4678", 1, 5,
-				"Sr", "Strontium", "87.62", 2, 5,
-				"Y", "Yttrium", "88.90585", 3, 5,
-				"Zr", "Zirconium", "91.224", 4, 5,
-				"Nb", "Niobium", "92.90628", 5, 5,
-				"Mo", "Molybdenum", "95.96", 6, 5,
-				"Tc", "Technetium", "(98)", 7, 5,
-				"Ru", "Ruthenium", "101.07", 8, 5,
-				"Rh", "Rhodium", "102.9055", 9, 5,
-				"Pd", "Palladium", "106.42", 10, 5,
-				"Ag", "Silver", "107.8682", 11, 5,
-				"Cd", "Cadmium", "112.411", 12, 5,
-				"In", "Indium", "114.818", 13, 5,
-				"Sn", "Tin", "118.71", 14, 5,
-				"Sb", "Antimony", "121.76", 15, 5,
-				"Te", "Tellurium", "127.6", 16, 5,
-				"I", "Iodine", "126.90447", 17, 5,
-				"Xe", "Xenon", "131.293", 18, 5,
-				"Cs", "Caesium", "132.9054", 1, 6,
-				"Ba", "Barium", "132.9054", 2, 6,
-				"La", "Lanthanum", "138.90547", 4, 9,
-				"Ce", "Cerium", "140.116", 5, 9,
-				"Pr", "Praseodymium", "140.90765", 6, 9,
-				"Nd", "Neodymium", "144.242", 7, 9,
-				"Pm", "Promethium", "(145)", 8, 9,
-				"Sm", "Samarium", "150.36", 9, 9,
-				"Eu", "Europium", "151.964", 10, 9,
-				"Gd", "Gadolinium", "157.25", 11, 9,
-				"Tb", "Terbium", "158.92535", 12, 9,
-				"Dy", "Dysprosium", "162.5", 13, 9,
-				"Ho", "Holmium", "164.93032", 14, 9,
-				"Er", "Erbium", "167.259", 15, 9,
-				"Tm", "Thulium", "168.93421", 16, 9,
-				"Yb", "Ytterbium", "173.054", 17, 9,
-				"Lu", "Lutetium", "174.9668", 18, 9,
-				"Hf", "Hafnium", "178.49", 4, 6,
-				"Ta", "Tantalum", "180.94788", 5, 6,
-				"W", "Tungsten", "183.84", 6, 6,
-				"Re", "Rhenium", "186.207", 7, 6,
-				"Os", "Osmium", "190.23", 8, 6,
-				"Ir", "Iridium", "192.217", 9, 6,
-				"Pt", "Platinum", "195.084", 10, 6,
-				"Au", "Gold", "196.966569", 11, 6,
-				"Hg", "Mercury", "200.59", 12, 6,
-				"Tl", "Thallium", "204.3833", 13, 6,
-				"Pb", "Lead", "207.2", 14, 6,
-				"Bi", "Bismuth", "208.9804", 15, 6,
-				"Po", "Polonium", "(209)", 16, 6,
-				"At", "Astatine", "(210)", 17, 6,
-				"Rn", "Radon", "(222)", 18, 6,
-				"Fr", "Francium", "(223)", 1, 7,
-				"Ra", "Radium", "(226)", 2, 7,
-				"Ac", "Actinium", "(227)", 4, 10,
-				"Th", "Thorium", "232.03806", 5, 10,
-				"Pa", "Protactinium", "231.0588", 6, 10,
-				"U", "Uranium", "238.02891", 7, 10,
-				"Np", "Neptunium", "(237)", 8, 10,
-				"Pu", "Plutonium", "(244)", 9, 10,
-				"Am", "Americium", "(243)", 10, 10,
-				"Cm", "Curium", "(247)", 11, 10,
-				"Bk", "Berkelium", "(247)", 12, 10,
-				"Cf", "Californium", "(251)", 13, 10,
-				"Es", "Einstenium", "(252)", 14, 10,
-				"Fm", "Fermium", "(257)", 15, 10,
-				"Md", "Mendelevium", "(258)", 16, 10,
-				"No", "Nobelium", "(259)", 17, 10,
-				"Lr", "Lawrencium", "(262)", 18, 10,
-				"Rf", "Rutherfordium", "(267)", 4, 7,
-				"Db", "Dubnium", "(268)", 5, 7,
-				"Sg", "Seaborgium", "(271)", 6, 7,
-				"Bh", "Bohrium", "(272)", 7, 7,
-				"Hs", "Hassium", "(270)", 8, 7,
-				"Mt", "Meitnerium", "(276)", 9, 7,
-				"Ds", "Darmstadium", "(281)", 10, 7,
-				"Rg", "Roentgenium", "(280)", 11, 7,
-				"Cn", "Copernicium", "(285)", 12, 7,
-				"Nh", "Nihonium", "(286)", 13, 7,
-				"Fl", "Flerovium", "(289)", 14, 7,
-				"Mc", "Moscovium", "(290)", 15, 7,
-				"Lv", "Livermorium", "(293)", 16, 7,
-				"Ts", "Tennessine", "(294)", 17, 7,
-				"Og", "Oganesson", "(294)", 18, 7
+				"Zafril", "24", "M", 1, 1,
+				"Hakeem", "25", "M", 2, 1,
+				"Rasyid", "24", "M", 3, 2,
+				"Fahim", "24", "M", 4, 2,
+				"Abiri", "27", "M", 5, 2,
+				"Faiz", "26", "M", 6, 2,
+				"Adam", "24", "M", 7, 2,
+				"Sara", "24", "F", 8, 2,
+				"Afiza", "24", "M", 9, 2,
+				"Muqri", "23", "F", 10, 2,
+				"Shafik", "24", "M", 11, 3,
+				"Aidil", "24", "M", 12, 3,
+				"Amalina", "23", "M", 13, 3,
+				"Aravin", "22", "M", 14, 3,
+				"Noraliza", "23", "F", 15, 3,
+				"Dzohair", "22", "M", 16, 3,
+				"Zulkifli", "48", "M", 17, 3,
+				"Eizlan", "22", "M", 18, 3,
+				"Ejad", "25", "M", 19, 4,
+				"Emirul", "24", "M", 20, 4,
+				"Esma", "23", "M", 21, 4,
+				"Faizal", "24", "M", 22, 4,
+				"Fajrul", "24", "M", 23, 4,
+				"Fiza", "24", "F", 24, 4,
+				"Fida", "24", "F", 25, 4,
+				"Tahir", "46", "M", 26, 4,
+				"Anis", "22", "M", 27, 4,
+				"Fadli", "23", "M", 28, 4,
+				"Zul", "23", "M", 29, 4,
+				"Safia", "23", "F", 30, 4,
+				"Ga", "Gallium", "69.723", 31, 4,
+				"Ge", "Germanium", "72.63", 32, 4,
+				"As", "Arsenic", "74.9216", 33, 4,
+				"Se", "Selenium", "78.96", 34, 4,
+				"Br", "Bromine", "79.904", 35, 4,
+				"Kr", "Krypton", "83.798", 36, 4,
+				"Rb", "Rubidium", "85.4678", 37, 5,
+				"Sr", "Strontium", "87.62", 38, 5,
+				"Y", "Yttrium", "88.90585", 39, 5,
+				"Zr", "Zirconium", "91.224", 40, 5,
+				"Nb", "Niobium", "92.90628", 41, 5,
+				"Mo", "Molybdenum", "95.96", 42, 5,
+				"Tc", "Technetium", "(98)", 43, 5,
+				"Ru", "Ruthenium", "101.07", 44, 5,
+				"Rh", "Rhodium", "102.9055", 45, 5,
+				"Pd", "Palladium", "106.42", 46, 5,
+				"Ag", "Silver", "107.8682", 47, 5,
+				"Cd", "Cadmium", "112.411", 48, 5,
+				"In", "Indium", "114.818", 49, 5,
+				"Sn", "Tin", "118.71", 50, 5,
+				"Sb", "Antimony", "121.76", 51, 5,
+				"Te", "Tellurium", "127.6", 52, 5,
+				"I", "Iodine", "126.90447", 53, 5,
+				"Xe", "Xenon", "131.293", 54, 5,
+				"Cs", "Caesium", "132.9054", 55, 6,
+				"Ba", "Barium", "132.9054", 56, 6,
+				"La", "Lanthanum", "138.90547", 57, 9,
+				"Ce", "Cerium", "140.116", 58, 9,
+				"Pr", "Praseodymium", "140.90765", 59, 9,
+				"Nd", "Neodymium", "144.242", 60, 9,
+				"Pm", "Promethium", "(145)", 61, 9,
+				"Sm", "Samarium", "150.36", 62, 9,
+				"Eu", "Europium", "151.964", 63, 9,
+				"Gd", "Gadolinium", "157.25", 64, 9,
+				"Tb", "Terbium", "158.92535", 65, 9,
+				"Dy", "Dysprosium", "162.5", 66, 9,
+				"Ho", "Holmium", "164.93032", 67, 9,
+				"Er", "Erbium", "167.259", 68, 9,
+				"Tm", "Thulium", "168.93421", 69, 9,
+				"Yb", "Ytterbium", "173.054", 70, 9,
+				"Lu", "Lutetium", "174.9668", 71, 9,
+				"Hf", "Hafnium", "178.49", 72, 6,
+				"Ta", "Tantalum", "180.94788", 73, 6,
+				"W", "Tungsten", "183.84", 74, 6,
+				"Re", "Rhenium", "186.207", 75, 6,
+				"Os", "Osmium", "190.23", 76, 6,
+				"Ir", "Iridium", "192.217", 77, 6,
+				"Pt", "Platinum", "195.084", 78, 6,
+				"Au", "Gold", "196.966569", 79, 6,
+				"Hg", "Mercury", "200.59", 80, 6,
+				"Tl", "Thallium", "204.3833", 81, 6,
+				"Pb", "Lead", "207.2", 82, 6,
+				"Bi", "Bismuth", "208.9804", 83, 6,
+				"Po", "Polonium", "(209)", 84, 6,
+				"At", "Astatine", "(210)", 85, 6,
+				"Rn", "Radon", "(222)", 86, 6,
+				"Fr", "Francium", "(223)", 87, 7,
+				"Ra", "Radium", "(226)", 88, 7,
+				"Ac", "Actinium", "(227)", 89, 10,
+				"Th", "Thorium", "232.03806", 90, 10,
+				"Pa", "Protactinium", "231.0588", 91, 10,
+				"U", "Uranium", "238.02891", 92, 10,
+				"Np", "Neptunium", "(237)", 93, 10,
+				"Pu", "Plutonium", "(244)", 94, 10,
+				"Am", "Americium", "(243)", 95, 10,
+				"Cm", "Curium", "(247)", 96, 10,
+				"Bk", "Berkelium", "(247)", 97, 10,
+				"Cf", "Californium", "(251)", 98, 10,
+				"Es", "Einstenium", "(252)", 99, 10,
+				"Fm", "Fermium", "(257)", 100, 10,
+				"Md", "Mendelevium", "(258)", 101, 10,
+				"No", "Nobelium", "(259)", 102, 10,
+				"Lr", "Lawrencium", "(262)", 103, 10,
+				"Rf", "Rutherfordium", "(267)", 104, 7,
+				"Db", "Dubnium", "(268)", 105, 7,
+				"Sg", "Seaborgium", "(271)", 106, 7,
+				"Bh", "Bohrium", "(272)", 107, 7,
+				"Hs", "Hassium", "(270)", 108, 7,
+				"Mt", "Meitnerium", "(276)", 109, 7,
+				"Ds", "Darmstadium", "(281)", 110, 7,
+				"Rg", "Roentgenium", "(280)", 1111, 7,
+				"Cn", "Copernicium", "(285)", 112, 7,
+				"Nh", "Nihonium", "(286)", 113, 7,
+				"Fl", "Flerovium", "(289)", 114, 7,
+				"Mc", "Moscovium", "(290)", 115, 7,
+				"Lv", "Livermorium", "(293)", 116, 7,
+				"Ts", "Tennessine", "(294)", 117, 7,
+				"Og", "Oganesson", "(294)", 118, 7
 			];
 
 			var camera, scene, renderer;
